RESOLVED FIXED55250
Option-clicking on links doesn't download them due to sandbox violation
https://bugs.webkit.org/show_bug.cgi?id=55250
Summary Option-clicking on links doesn't download them due to sandbox violation
Anders Carlsson
Reported 2011-02-25 11:40:32 PST
Option-clicking on links doesn't download them due to sandbox violation
Attachments
Patch (9.43 KB, patch)
2011-02-25 11:42 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-02-25 11:42:43 PST
Anders Carlsson
Comment 2 2011-02-25 11:57:57 PST
WebKit Review Bot
Comment 3 2011-02-25 17:15:38 PST
http://trac.webkit.org/changeset/79715 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.